# imgui

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.txt  CMakeLists.txt  Delete ImGui  Dockerfile  ImGui.vcxproj  Imgui.vcxproj  Imgui.vcxproj.filters  LICENSE  LICENSE.txt  Makefile  PR_9469_REVIEW_RESPONSE.md  README.md  TODO.txt  appveyor.yml  build.lua  cmake-testbuild.sh  imconfig.h  imfile.cpp  imfile.h  imgui-config.cmake.in  imgui.cpp  imgui.cppm  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_other.cpp  imgui_other.h  imgui_raii.h  imgui_tables.cpp  imgui_tabs.cpp  (+19 more)
ImGuiDemo/: CMakeLists.txt  imgui_demo.cpp
ImGuiDemo/examples/: imgui_examples.sln
ImGuiFramework/: CMakeLists.txt  imgui.cpp  imgui_draw.cpp  imgui_widgets.cpp  imstb_truetype.h
ImGuiPlatforms/apple/: CMakeLists.txt  imgui_impl_osx.h  imgui_impl_osx.mm
ImGuiPlatforms/glfw/: CMakeLists.txt  imgui_impl_glfw.cpp
ImGuiPlatforms/sdl2/: CMakeLists.txt  imgui_impl_sdl2.cpp
ImGuiRenderers/metal/: CMakeLists.txt
ImGuiRenderers/opengl2/: CMakeLists.txt
ImGuiRenderers/vulkan/: CMakeLists.txt  generate_spv.sh  glsl_shader.vert  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
backends/: CMakeLists.txt  README.txt  emscripten_mainloop_stub.h  imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  imgui_impl_dx10.cmake  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cmake  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cmake  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_dxshared.h  imgui_impl_emscripten.cpp  imgui_impl_emscripten.h  imgui_impl_gdi.cpp  imgui_impl_gdi.h  imgui_impl_glfw.cmake  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cmake  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  imgui_impl_metal.cmake  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_metal4.h  imgui_impl_metal4.mm  imgui_impl_metal_cpp.cpp  imgui_impl_metal_cpp.h  (+45 more)
backends/bgfx/: fs_ocornut_imgui.bin.h  vs_ocornut_imgui.bin.h
backends/cmake/: ConfigureBackends.cmake  FindPackages.cmake  ListBackends.cmake
backends/sdlgpu3/: build_instructions.txt  shader.frag  shader.vert
backends/vulkan/: build_instructions.txt  generate_spv.sh  glsl_shader.frag  glsl_shader.frag.u32  glsl_shader.vert  glsl_shader_heap.frag
cmake/: CMakeLists.txt  Config.cmake.in  _IMGUI_WORKS_WITHOUT_CMAKE.md  add_library_ns.cmake  cmake-testbuild.sh  imgui-config.cmake.in  imguiConfig.cmake.in  install_target.cmake  target_include_dir_iface.cmake
dev/: CMakeLists.txt
examples/: .gitignore  CMakeLists.txt  CMakePresets.json  ImGuiConfig.cmake  ImGuiConfig.cmake.in  ImGuiModule.cmake  ImGuiTargets.cmake  README.txt  imgui_examples.sln  imgui_examples_msvc2010.sln  imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_dx12.cpp  imgui_impl_dx12.h  imgui_impl_dx9.cmake  imgui_impl_dx9.cpp  imgui_impl_dx9.h  imgui_impl_freeglut.cpp  imgui_impl_freeglut.h  imgui_impl_gdi.cpp  imgui_impl_gdi.h  imgui_impl_gl.cpp  imgui_impl_gl.h  imgui_impl_gles2.cpp  imgui_impl_gles2.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_glut.cpp  imgui_impl_glut.h  imgui_impl_gtk3.cpp  imgui_impl_gtk3.h  imgui_impl_marmalade.cpp  imgui_impl_marmalade.h  imgui_impl_metal.h  imgui_impl_metal.mm  imgui_impl_opengl.cmake  (+33 more)
examples/allegro5_example/: README.md  imconfig_allegro5.h  imgui_impl_a5.cpp  imgui_impl_a5.h  imgui_impl_allegro5.cpp  imgui_impl_allegro5.h  main.cpp
examples/android_example/: README.md  build.gradle
examples/apple_example/: .gitignore  README.md
examples/directx10_example/: build_win32.bat  directx10_example.vcxproj  directx10_example.vcxproj.filters  imgui_impl_dx10.cpp  imgui_impl_dx10.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  main.cpp
examples/directx11_example/: build_win32.bat  directx11_example.vcxproj  directx11_example.vcxproj.filters  imgui_impl_dx11.cpp  imgui_impl_dx11.h  main.cpp
examples/directx11_uwp_example/: .gitignore  App.cpp  App.h  Main.cpp  Main.h  Package.appxmanifest  directx11_uwp_example.sln  directx11_uwp_example.vcxproj  directx11_uwp_example.vcxproj.filters  imgui_impl_dx11_uwp.cpp  imgui_impl_dx11_uwp.h  pch.h
examples/directx12_example/: build_win32.bat  directx12_example.vcxproj  directx12_example.vcxproj.filters  imgui_impl_dx12.cpp  imgui_impl_dx12.h  main.cpp
examples/directx9_example/: build_win32.bat  directx9_example.sln  directx9_example.vcxproj  directx9_example.vcxproj.filters  imgui_impl_dx9.cpp  imgui_impl_dx9.h  main.cpp
examples/example_allegro5/: CMakeLists.txt  README.md  example_allegro5.vcxproj  example_allegro5.vcxproj.filters  main.cpp
examples/example_android_opengl3/: CMakeLists.txt  README.md  main.cpp
examples/example_android_sdl_gles3/: setup_android.sh
examples/example_android_sdlrenderer3/: Makefile  README.md
examples/example_android_vulkan/: CMakeLists.txt  README.md  build.gradle.kts  gradle.properties  main.cpp  settings.gradle.kts
examples/example_apple/: README.md
examples/example_apple_metal/: CMakeLists.txt  Makefile  README.md  main.mm
examples/example_apple_metal4/: Makefile  README.md  main.mm
examples/example_apple_opengl2/: CMakeLists.txt  Makefile  main.mm
examples/example_bug_9001_glfw_opengl3/: main.cpp
examples/example_emscripten/: CMakeLists.txt  Makefile  README.md  main.cpp  shell_minimal.html
examples/example_emscripten_glfw_opengl3/: Makefile  main.cpp  shell_minimal.html
examples/example_emscripten_opengl3/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  shell_minimal.html
examples/example_emscripten_webgpu/: Makefile  README.md  example_emscripten.html  main.cpp
examples/example_emscripten_wgpu/: CMakeLists.txt  Makefile  Makefile.emscripten  README.md  example_emscripten_wgpu.html  main.cpp
examples/example_glfw_bgfx/: main.cpp  (+1 more)
(+910 files in other folders)
